--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "loft2",
   "repository": "",
   "devDependencies": {
+    "color": "^0.7.3",
     "gulp": "^3.8.10",
+    "gulp-compass": "^2.0.3",
     "gulp-concat": "^2.4.2",
     "gulp-csso": "^0.2.9",
     "gulp-inject": "^1.0.2",
@@ -13,6 +15,7 @@
     "gulp-sass": "^1.2.4",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.1",
-    "main-bower-files": "^2.4.1"
+    "main-bower-files": "^2.4.1",
+    "node-sass": "^1.2.3"
   }
 }
