--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "gulp": "^3.8.10",
     "gulp-compass": "^2.0.3",
     "gulp-concat": "^2.4.2",
-    "gulp-csso": "^0.2.9",
     "gulp-inject": "^1.0.2",
+    "gulp-jade": "^0.10.0",
+    "gulp-minify-css": "^0.3.11",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.2.4",
     "gulp-uglify": "^1.0.2",
